Proof read RAL report.

--- a/RAL/vesuvio_report/vesuvio_report.tex
+++ b/RAL/vesuvio_report/vesuvio_report.tex
@@ -87,7 +87,9 @@ VESUVIO is an neutron spectrometer at the ISIS pulsed neutron source operating a
 \label{sec:introduction}
 \subsection{VESUVIO Overview}
 \label{subsec:VESUVIO-overview}
-VESUVIO is a deep inelastic neutron scattering spectrometer situated on the S2 beamline at ISIS with an operational energy range of 5-150 eV. The instrument utilises a indirect geometry design and consists of 64 Yttrium Aluminium Perovskite $\gamma$-ray forward scattering detectors in 8 separate banks and 132 $^6$Li doped glass scintillator back scattering detectors split into 3 banks. The scattered neutron beam impinges onto the analyzer foil which provides the energy analysis by means of resonance absorption at a given resonance energy. For this purpose usually gold foils are employed which have a large energy resonance at 4.9 eV $\pm$ 0.15 eV. With this experimental arrangement, data collection necessarily involves foil cycling in both forward and backscattering geometries in order to obtain TOF data with and without energy selection, followed by a subtraction of these two data sets to obtain NCS spectra. In this context, it is worth emphasizing that the “foil-out” data set in every VESUVIO experiment is tantamount to a simultaneous ND measurement of the sample under investigation. On VESUVIO, two different final-energy-selection schemes are currently used, hereafter referred to as resonance-detector (RD) and resonance-filter (RF) configurations. The RD configuration employs the foil to define the energy o the scattered neutrons via resonant neutron absorption, and a γ -ray detector to probe the prompt cascade following the subsequent (n,γ ) reaction \cite{schooneveld2006foil}. At present, VESUVIO uses RD (RF) in forward (backscattering) geometries, respectively.
+VESUVIO is a deep inelastic neutron scattering spectrometer situated on the S2 beamline at ISIS with an operational energy range of 5-150 eV. The instrument utilises a indirect geometry design and consists of 64 Yttrium Aluminium Perovskite $\gamma$-ray forward scattering detectors in 8 separate banks and 132 $^6$Li doped glass scintillator back scattering detectors split into 3 banks. The scattered neutron beam impinges onto the analyzer foil which provides the energy analysis by means of resonance absorption at a given resonance energy. For this purpose usually gold foils are employed which have a large energy resonance at 4.9 eV $\pm$ 0.15 eV. With this experimental arrangement, data collection necessarily involves foil cycling in both forward and backscattering geometries in order to obtain TOF data with and without energy selection, followed by a subtraction of these two data sets to obtain NCS spectra. 
+
+In this context, it is worth emphasizing that the “foil-out” data set in every VESUVIO experiment is tantamount to a simultaneous ND measurement of the sample under investigation. On VESUVIO, two different final-energy-selection schemes are currently used, hereafter referred to as resonance-detector (RD) and resonance-filter (RF) configurations. The RD configuration employs the foil to define the energy of the scattered neutrons via resonant neutron absorption, and a $\gamma$-ray detector to probe the prompt cascade following the subsequent (n,$\gamma$) reaction \cite{schooneveld2006foil}. At present, VESUVIO uses RD (RF) in forward (backscattering) geometries, respectively.
 
 \begin{figure}[H]
 \centering
@@ -96,8 +98,10 @@ VESUVIO is a deep inelastic neutron scattering spectrometer situated on the S2 b
 \label{fig:VESUVIO-diagram}
 \end{figure}
 
-For the RF configuration, the VESUVIO backscattering bank is equipped with Li-doped glass detectors only sensitive to neutrons \cite{seeger1985double} and the TOF spectra are obtained by taking the difference between “foil-in” and “foil-out” data, referred to as single difference (SD). To improve final-energy resolution, double-difference (DD) techniques have been implemented with three measurements, namely with no filter, a filter of thickness d1 and neutron absorption a A1(E1) and a filter of the same material of thickness d2 and absorption A2(E1). The energy resolution function is well approximated by a Voigt line shape where the Lorentzian contribution is largely removed by the DD technique VESUVIO is primarily designed to measure the atomic momentum distribution of atoms in condensed matter systems. Data analysis on VESUVIO relies on the accuracy of two approximation, namely the incoherent (INCA) and impulse approximation (IA). INCA implies that for incident neutron wavelengths much less than the d-spacing of the sample, atoms will scatter incoherently and the measured intensity is
-therefore the total sum of intensities for individual atoms in the sample \cite{fernandezalonso2013neutron}. IA effectively treats the scattering as single atom `billiard ball' scattering, with conservation of momentum and kinetic energy of and a neutron a single target atom, allowing the momentum distribution of a mass to be measured using the theory developped in Ref. \cite{mayers2012vesuvio}. NCS data contains a number of spectra each consisting of a series of peaks. Each of these peaks corresponds to a single atomic mass in the sample begins studied. The positions of the peaks in the spectrum are determined by the mass of the sample. The amplitude of each of the peaks is determined by an atom's mass and scattering cross section. Finally, the width of the peaks is determined by the momentum distribution of the mass. The goal of data analysis of VESUVIO data is to determine the shape and intensity of the peaks, thereby determining the momentum distributions of the atoms in the sample. \cite{mayers2010user}.
+For the RF configuration, the VESUVIO backscattering bank is equipped with Li-doped glass detectors only sensitive to neutrons \cite{seeger1985double} and the TOF spectra are obtained by taking the difference between “foil-in” and “foil-out” data, referred to as single difference (SD). To improve final-energy resolution, double-difference (DD) techniques have been implemented with three measurements, namely with no filter, a filter of thickness d1 and neutron absorption A1(E1) and a filter of the same material of thickness d2 and absorption A2(E1). The energy resolution function is well approximated by a Voigt line shape where the Lorentzian contribution is largely removed by the DD technique.
+
+VESUVIO is primarily designed to measure the atomic momentum distribution of atoms in condensed matter systems. Data analysis on VESUVIO relies on the accuracy of two approximations, namely the incoherent (INCA) and impulse approximation (IA). INCA implies that for incident neutron wavelengths much less than the d-spacing of the sample, atoms will scatter incoherently and the measured intensity is
+therefore the total sum of intensities for individual atoms in the sample \cite{fernandezalonso2013neutron}. IA effectively treats the scattering as single atom `billiard ball' scattering, with conservation of momentum and kinetic energy of and a neutron a single target atom, allowing the momentum distribution of a mass to be measured using the theory developed in Ref. \cite{mayers2012vesuvio}. NCS data contains a number of spectra each consisting of a series of peaks. Each of these peaks corresponds to a single atomic mass in the sample being studied. The positions of the peaks in the spectrum are determined by the mass of the sample. The amplitude of each of the peaks is determined by an atom's mass and scattering cross section. Finally, the width of the peaks is determined by the momentum distribution of the mass. The goal of data analysis of VESUVIO data is to determine the shape and intensity of the peaks, thereby determining the momentum distributions of the atoms in the sample. \cite{mayers2010user}.
 
 VESUVIO is primarily designed to measure the atomic momentum distribution of atoms in condensed matter systems. Data analysis on VESUVIO relies on the accuracy of the impulse approximation which implies that for incident neutron wavelengths much less than the $d$-spacing of the sample, atoms will scatter incoherently and the measured intensity is therefore the total sum of intensities for individual atoms in the sample \cite{fernandezalonso2013neutron}. This effectively treats the scattering as single atom `billiard ball' scattering, with conservation of momentum and kinetic energy of and a neutron a single target atom, allowing the momentum distribution of a mass to be measured using the theory developed in Ref. \cite{mayers2004vesuvio}.
 
@@ -105,7 +109,7 @@ The resulting time-of-flight data contains a number of spectra each consisting o
 
 \subsection{Introduction to the NCS data analysis module}
 \label{subsec:intro-data-analysis}
-The Mantid development team in combination with VESUVIO instrument scientists have created a data analysis package to help aid with the analysis of VESUVIO data. This is still a working in progress and under heavy development. Currently it is in the form of a separate python module called ncs.py (NCS: Neutron Compton Scattering) which provides a collection of helper functions and classes for data analysis which builds upon the existing Mantid framework. This module is publicly available in the Mantid Github scripts repository in the \textit{development \textgreater  inelastic} folder \cite{mantidgithubncs}. The simplest way of including the ncs python module in Mantid is to place the files \textit{ncs.py} and \textit{ncs\_plotting.py} in the \textit{ \textless Mantid Install \textgreater }/\textit{scripts} folder. This will allow the ncs module to be imported directly into the Mantid script window.
+The Mantid development team in combination with VESUVIO instrument scientists have created a data analysis package to help aid with the analysis of VESUVIO data. This is still a work in progress and under heavy development. Currently it is in the form of a separate python module called ncs.py (NCS: Neutron Compton Scattering) which provides a collection of helper functions and classes for data analysis which builds upon the existing Mantid framework. This module is publicly available in the Mantid Github scripts repository in the \textit{development \textgreater  inelastic} folder \cite{mantidgithubncs}. The simplest way of including the ncs python module in Mantid is to place the files \textit{ncs.py} and \textit{ncs\_plotting.py} in the \textit{ \textless Mantid Install \textgreater }/\textit{scripts} folder. This will allow the ncs module to be imported directly into the Mantid script window.
 
 \section{Viewing Data in Time-of-Flight}
 \label{sec:viewtof}
@@ -177,7 +181,7 @@ background, corrected = ncs.gamma_correct(raw_ws, fit_options, params_ws)
 
 \section{Fitting}
 \label{sec:fitting}
-The majority of the work to integrate VESUVIO into Mantid has been concerned with the development of the fitting procedures required to measure the neutron Compton profile following the theory described in Ref.\citep{mayers2012vesuvio}. Development in this area has focussed on two major additions to the Mantid framework. First was the creation a new suite of fit functions which could accurately describe the results of a neutron Compton scattering experiment. The second was the creation of a collection of supporting data analysis functions which allow the user to easily set up a fit given the appropriate parameters for the sample and are available in the ncs.py module. These will eventually be folded into a GUI for VESUVIO (see section \ref{sec:GUI}).
+The majority of the work to integrate VESUVIO into Mantid has been concerned with the development of the fitting procedures required to measure the neutron Compton profile following the theory described in Ref. \citep{mayers2012vesuvio}. Development in this area has focussed on two major additions to the Mantid framework. First was the creation a new suite of fit functions which could accurately describe the results of a neutron Compton scattering experiment. The second was the creation of a collection of supporting data analysis functions which allow the user to easily set up a fit given the appropriate parameters for the sample and are available in the ncs.py module. These will eventually be folded into a GUI for VESUVIO (see section \ref{sec:GUI}).
 
 There are two major fit functions used in the analysis of VESUVIO data. The \textit{GaussianComptonProfile} defines a function for fitting the simpler Gaussian approximation to mass peaks. The \textit{GramChalierComptonProfile} is for the more complex fitting case where the atoms in the sample are affected by anisotropy and anharmonicity. The theory behind both of these functions are described in detail in Refs. \cite{mayers2012vesuvio, andreani2005measurement}. Both functions are implemented as standard Mantid fit functions and are therefore directly accessible through the fit wizard.
 
@@ -264,7 +268,7 @@ The \textit{NormaliseByPeakArea} algorithm produces four workspaces:
 \begin{itemize}
 \item \textbf{OutputWorkspace - } This workspace is the time-of-flight workspace supplied as input to the algorithm normalised by the area of the fitted peak.
 \item \textbf{YSpaceDataWorkspace - } This is the time-of-flight workspace converted to y-space using the \textit{ConvertToYSpace} algorithm.
-\item \textbf{FittedWorkspace - } The value of the fit to the data.
+\item \textbf{FittedWorkspace - } The values of the fit to the data.
 \item \textbf{SymmetrisedWorkspace - } The time-of-flight workspace converted to y-space and symmetrised about zero. As the momentum distribution should be symmetric about the origin, this workspace should match the \textit{YSpaceDataWorkspace}.
 \end{itemize}
 
@@ -274,7 +278,7 @@ normalised, yspace, fitted, symmetrised = \
 	NormaliseByPeakArea(InputWorkspace=raw_ws, Mass=1.0079,Sum=True)
 \end{minted}
 \caption{Example python code showing how to run the \textit{NormaliseByPeakArea} algorithm.}
-\label{lst:plot-angle}
+\label{lst:normalise-peak-area}
 \end{listing}
 
 The final step in analysis is to simultaneously fit data across all detectors using the normalised workspace created as part of the previous section while keeping the widths of each peak tied. This roughly emulates the corresponding section described in Ref. \cite{mayers2010user} as the \textit{isofileu} program. This global fitting option is still currently under development.
@@ -328,7 +332,7 @@ The calibration routines for VESUVIO have been implemented as two Mantid algorit
 \label{fig:calib-theta}
 \end{figure}
 
-The calibration fit program can either fit using a list of incident energies as the reference point for the expected centre point of a recoil peak in time-of-flight data or by taking a list of $d$-spacings and calculating the position of Bragg peaks. The algorithm also requires a file containing a set of reference parameters with which to calculate the expected peak positions. This is analogous to the procedures described in Ref. \cite{mayers2011calibration} where hand measured parameters were used as starting values and the fitting program used these to incrementally converge on the true value of the instrument parameters.
+The calibration fit program can either fit using a list of incident energies to calculate the expected centre point of a recoil peak in time-of-flight data or by taking a list of $d$-spacings and calculating the position of Bragg peaks. The algorithm also requires a file containing a set of reference parameters with which to calculate the expected peak positions. This is analogous to the procedures described in Ref. \cite{mayers2011calibration} where hand measured parameters were used as starting values and the fitting program used these to incrementally converge on the true value of the instrument parameters.
 
 The analysis program makes use of the fit program to fit all of the parameters in the order defined by the original VESUVIO calibration paper \cite{mayers2011calibration}, starting with the incident flight path and time delay using well defined uranium sample runs, then computing the values of the final energy and hence the final flight path and finally the scattering angles for all detectors.
 
@@ -380,7 +384,7 @@ ncs_plotting.plot(raw_ws, angles=(30,35))
 
 \clearpage
 \section*{Acknowledgments}
-The author would like to thank M. Gigg and A. Seel for their knowledgeable assistance in producing this report and for aiding with the parts of the implementation the author had a hand in, and M. Gigg and R. Tolchenov who wrote the majority of the implementation presented in this document. I would also like to thank S. Mukhopadhyay for her contributions to the report.
+The author would like to thank M. Gigg, A. Seel, for their knowledgeable assistance in producing this report and for aiding with the parts of the implementation the author had a hand in, and M. Gigg and R. Tolchenov who wrote the majority of the implementation presented in this document. Many thanks to M. Krzystyniak for his contributions and  corrections, particularly in regard to VESUVIO theory. I would also like to thank S. Mukhopadhyay for her contributions to the report.
 
 \clearpage
 \bibliographystyle{unsrtnat_corrected}
