Vesuvio Report: Corrections from Felix

--- a/RAL/vesuvio_report/vesuvio_report.tex
+++ b/RAL/vesuvio_report/vesuvio_report.tex
@@ -80,7 +80,7 @@
 \clearpage
 
 \section{Abstract}
-VESUVIO is an neutron spectrometer at the ISIS pulsed neutron source operating at high energies in the 1 eV range and uses the experimental technique known as neutron Compton scattering to measure the momentum distributions of condensed matter systems \citep{mayers2012vesuvio}. Mantid \citep{mantid} is a data analysis application for neutron and muon scattering data used by multiple facilities across the world. Recently, extensive work has been carried out to integrate the bespoke data reduction and analysis routines written for VESUVIO with the Mantid framework. While the programs described in this document are designed to replicate the functionality of the Fortran and Genie routines already in use, most of them have been written from scratch and are not based on the original code base. This document outlines the current progress of development regarding what has already been implemented and what is remains to be finished.
+VESUVIO is a neutron spectrometer at the ISIS pulsed neutron source operating at high energies in the 1 eV range and uses the experimental technique known as neutron Compton scattering to measure the momentum distributions of condensed matter systems \citep{mayers2012vesuvio}. Mantid \citep{mantid} is a data analysis application for neutron and muon scattering data used by multiple facilities across the world. Recently, extensive work has been carried out to integrate the bespoke data reduction and analysis routines written for VESUVIO with the Mantid framework. While the programs described in this document are designed to replicate the functionality of the Fortran and Genie routines already in use, most of them have been written from scratch and are not based on the original code base. This document outlines the current progress of development regarding what has already been implemented and what is remains to be finished.
 
 \clearpage
 \section{Introduction}
@@ -101,11 +101,9 @@ In this context, it is worth emphasizing that the “foil-out” data set in eve
 For the RF configuration, the VESUVIO backscattering bank is equipped with Li-doped glass detectors only sensitive to neutrons \cite{seeger1985double} and the TOF spectra are obtained by taking the difference between “foil-in” and “foil-out” data, referred to as single difference (SD). To improve final-energy resolution, double-difference (DD) techniques have been implemented with three measurements, namely with no filter, a filter of thickness d1 and neutron absorption A1(E1) and a filter of the same material of thickness d2 and absorption A2(E1). The energy resolution function is well approximated by a Voigt line shape where the Lorentzian contribution is largely removed by the DD technique.
 
 VESUVIO is primarily designed to measure the atomic momentum distribution of atoms in condensed matter systems. Data analysis on VESUVIO relies on the accuracy of two approximations, namely the incoherent (INCA) and impulse approximation (IA). INCA implies that for incident neutron wavelengths much less than the d-spacing of the sample, atoms will scatter incoherently and the measured intensity is
-therefore the total sum of intensities for individual atoms in the sample \cite{fernandezalonso2013neutron}. IA effectively treats the scattering as single atom `billiard ball' scattering, with conservation of momentum and kinetic energy of and a neutron a single target atom, allowing the momentum distribution of a mass to be measured using the theory developed in Ref. \cite{mayers2012vesuvio}. NCS data contains a number of spectra each consisting of a series of peaks. Each of these peaks corresponds to a single atomic mass in the sample being studied. The positions of the peaks in the spectrum are determined by the mass of the sample. The amplitude of each of the peaks is determined by an atom's mass and scattering cross section. Finally, the width of the peaks is determined by the momentum distribution of the mass. The goal of data analysis of VESUVIO data is to determine the shape and intensity of the peaks, thereby determining the momentum distributions of the atoms in the sample. \cite{mayers2010user}.
+therefore the total sum of intensities for individual atoms in the sample \cite{fernandezalonso2013neutron}. IA effectively treats the scattering as single atom `billiard ball' scattering, with conservation of momentum and kinetic energy of and a neutron a single target atom, allowing the momentum distribution of a mass to be measured using the theory developed in Ref. \cite{mayers2012vesuvio}. 
 
-VESUVIO is primarily designed to measure the atomic momentum distribution of atoms in condensed matter systems. Data analysis on VESUVIO relies on the accuracy of the impulse approximation which implies that for incident neutron wavelengths much less than the $d$-spacing of the sample, atoms will scatter incoherently and the measured intensity is therefore the total sum of intensities for individual atoms in the sample \cite{fernandezalonso2013neutron}. This effectively treats the scattering as single atom `billiard ball' scattering, with conservation of momentum and kinetic energy of and a neutron a single target atom, allowing the momentum distribution of a mass to be measured using the theory developed in Ref. \cite{mayers2004vesuvio}.
-
-The resulting time-of-flight data contains a number of spectra each consisting of a series of peaks. Each of these peaks corresponds to a single atomic mass in the sample begins studied. The positions of the peaks in the spectrum are determined by the mass of the sample. The amplitude of each of the peaks is determined by an atom's mass and scattering cross section. Finally, the width of the peaks is determined by the momentum distribution of the mass. The goal of data analysis of VESUVIO data is to determine the shape and intensity of the peaks, thereby determining the momentum distributions of the atoms in the sample. \cite{mayers2010user}.
+NCS data contains a number of spectra each consisting of a series of peaks. Each of these peaks corresponds to a single atomic mass in the sample being studied. The positions of the peaks in the spectrum are determined by the mass of the sample. The amplitude of each of the peaks is determined by an atom's mass and scattering cross section. Finally, the width of the peaks is determined by the momentum distribution of the mass. The goal of data analysis of VESUVIO data is to determine the shape and intensity of the peaks, thereby determining the momentum distributions of the atoms in the sample. \cite{mayers2010user}.
 
 \subsection{Introduction to the NCS data analysis module}
 \label{subsec:intro-data-analysis}
