--- a/aber/IY_report/refs.bib
+++ b/aber/IY_report/refs.bib
@@ -117,3 +117,27 @@
   year={2011},
   publisher={Elsevier}
 }
+
+@techreport{adams2001iris,
+  author={Garcia-Sakai, V. and Adams, M.A. and Howells, W.S. and Telling, M.T.F.},
+  title={The IRIS user guide},
+  year={2011},
+  institution={Rutherford Appleton Laboratory UK},
+  number={RAL-TR-2011-004}
+}
+
+@techreport{telling2003osiris,
+  title={The OSIRIS user guide},
+  author={Telling, M.T.F. and Andersen, K.H.},
+  institution={Rutherford Appleton Laboratory UK},
+  year={2003},
+  number={RAL-TR-2003-016}
+}
+
+@incollection{rpynn2008,
+    author    = "R. Pynn",
+    title     = "Neutron Scattering—A Non-destructive Microscope for Seeing Inside Matter",
+    booktitle = "Neutron Scattering Applications and Techniques",
+    publisher = "Springer",
+    year      = "2008",
+}
