IY Report: Fix up references

--- a/aber/IY_report/refs.bib
+++ b/aber/IY_report/refs.bib
@@ -1,6 +1,6 @@
 @misc{isiswebsite2014,
-    author = "ISIS Neutron Source.",
-    title = "How ISIS works",
+    author = "{ISIS Neutron Source}",
+    title = "How {ISIS} works",
     month = "May",
     year = "2014",
     howpublished = "\url{http://www.isis.stfc.ac.uk/about/how-isis-works6313.html}",
@@ -30,7 +30,7 @@
 }
 
 @misc{msgwebsite2014,
-    author = "ISIS Neutron Source",
+    author = "{ISIS Neutron Source}",
     title = "Molecular Spectroscopy Group",
     month = "May",
     year = "2014",
@@ -38,7 +38,7 @@
 }
 
 @misc{mantid2014workflow,
-    author = "Mantid Project",
+    author = "{Mantid Project}",
     title = "Git Workflow",
     month = "August",
     year = "2014",
@@ -46,7 +46,7 @@
 }
 
 @misc{mantid2014algorithm,
-    author = "Mantid Project",
+    author = "{Mantid Project}",
     title = "Algorithms",
     month = "August",
     year = "2014",
@@ -54,7 +54,7 @@
 }
 
 @misc{mantid2014workspace,
-    author = "Mantid Project",
+    author = "{Mantid Project}",
     title = "Workspace",
     month = "August",
     year = "2014",
@@ -62,7 +62,7 @@
 }
 
 @misc{opengenie2014main,
-    author = "Open Genie",
+    author = "{Open Genie}",
     title = "Open Genie Homepage",
     month = "August",
     year = "2014",
@@ -97,7 +97,7 @@
 }
 
 @article{mayers2012vesuvio,
-  title={The VESUVIO electron volt neutron spectrometer},
+  title={The {VESUVIO} electron volt neutron spectrometer},
   author={Mayers, J and Reiter, G},
   journal={Measurement Science and Technology},
   volume={23},
@@ -120,14 +120,14 @@
 
 @techreport{adams2001iris,
   author={Garcia-Sakai, V. and Adams, M.A. and Howells, W.S. and Telling, M.T.F.},
-  title={The IRIS user guide},
+  title={The {IRIS} user guide},
   year={2011},
   institution={Rutherford Appleton Laboratory UK},
   number={RAL-TR-2011-004}
 }
 
 @techreport{telling2003osiris,
-  title={The OSIRIS user guide},
+  title={The {OSIRIS} user guide},
   author={Telling, M.T.F. and Andersen, K.H.},
   institution={Rutherford Appleton Laboratory UK},
   year={2003},
